--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -27,6 +27,7 @@ Colors
 	--color-link--highlight: var(--color-yellow);
 
 	--color-heading: hsl(215, 52%, 10%);
+	--color-amp-text: var(--color-flower-green);
 	--color-footer-text: hsl(215, 52%, 15%);
 }
 
@@ -58,34 +59,36 @@ Colors
 		--color-link--highlight: rgb(155, 75, 120);
 
 		--color-heading: hsl(0, 69%, 80%);
+		--color-amp-text: var(--color-site-title);
 		--color-footer-text: var(--color-text);
 	}
+}
 
-	[data-user-color-scheme="dark"] {
-		--color-black: hsl(215, 52%, 5%);
+[data-user-color-scheme="dark"] {
+	--color-black: hsl(215, 52%, 5%);
 
-		--color-bg: hsl(215, 52%, 18%);
-		--color-bg-alt: hsl(215, 52%, 20%);
+	--color-bg: hsl(215, 52%, 18%);
+	--color-bg-alt: hsl(215, 52%, 20%);
 
-		--color-text: hsl(47, 83%, 98%);
+	--color-text: hsl(47, 83%, 98%);
 
-		--color-site-title: hsl(47, 83%, 80%);
-		
-		--color-flower-fill: hsl(326, 35%, 50%);
-		--color-flower-green: hsl(134, 32%, 35%);
-		--color-flower-outline: hsl(215, 52%, 10%);
+	--color-site-title: hsl(47, 83%, 80%);
+	
+	--color-flower-fill: hsl(326, 35%, 50%);
+	--color-flower-green: hsl(134, 32%, 35%);
+	--color-flower-outline: hsl(215, 52%, 10%);
 
-		--border-style: dotted;
-		--color-border: hsl(215, 52%, 10%);
+	--border-style: dotted;
+	--color-border: hsl(215, 52%, 10%);
 
-		--color-link: var(--color-text);
-		--color-link--visited: inherit;
-		--color-link--hover: var(--color-text);
-		--color-link--highlight: rgb(155, 75, 120);
+	--color-link: var(--color-text);
+	--color-link--visited: inherit;
+	--color-link--hover: var(--color-text);
+	--color-link--highlight: rgb(155, 75, 120);
 
-		--color-heading: hsl(0, 69%, 80%);
-		--color-footer-text: var(--color-text);
-	}
+	--color-heading: hsl(0, 69%, 80%);
+	--color-amp-text: var(--color-site-title);
+	--color-footer-text: var(--color-text);
 }
 
 /*--------------------------------------------------------------
